[#37] 공연장 정보 등록 API 구현 - 피드백 반영(@ Entity @ Builder - 관련 문제 수정)
* 클래스 단위에 @Builder를 사용하면, 전체 필드를 생성해야하는 생성자가 추가되어야하며, 객체 생성 시 받아야하지 않는 값들도 빌드에 의해 노출되게 됨
* 위의 이유로 받아야하는 값들만 셋팅 가능하도록 필요한 값만 추가되어있는 생성자를 만들고, 해당 생성자에 @Builder 사용
* NoArgsContructor에 접근제어자를 추가하여 관련된 객체끼리만 생성할 수 있도록 함
* 무분별하게 객체가 변경되는 위험을 없애고자 @Setter 삭제
* Entity 객체의 영속성을 부여하기 위해 사용하던 메서드를 다른 서비스들도 사용할 수 있도록 메서드화 함